--- a/package.json
+++ b/package.json
@@ -13,26 +13,19 @@
   },
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/jzr1991/twitter-anal-backend.git"
+    "url": "git+https://github.com/jzr1991/midweek-manager-v2-api.git"
   },
-  "keywords": [
-    "twitter",
-    "analysis",
-    "node",
-    "js"
-  ],
+  "keywords": [],
   "author": "Jack Roberts",
   "license": "ISC",
   "bugs": {
-    "url": "https://github.com/jzr1991/twitter-anal-backend/issues"
+    "url": "https://github.com/jzr1991/midweek-manager-v2-api/issues"
   },
-  "homepage": "https://github.com/jzr1991/twitter-anal-backend#readme",
+  "homepage": "https://github.com/jzr1991/midweek-manager-v2-api#readme",
   "devDependencies": {
-    "@types/axios": "^0.14.0",
     "@types/body-parser": "^1.17.0",
     "@types/chai": "^4.1.3",
     "@types/express": "^4.0.37",
-    "@types/graphql": "^0.11.7",
     "@types/mocha": "^2.2.43",
     "@types/sinon": "^2.3.6",
     "@types/winston": "^2.3.9",
@@ -47,13 +40,9 @@
     "typescript": "^2.6.2"
   },
   "dependencies": {
-    "apollo-server-express": "^1.3.2",
     "body-parser": "^1.18.2",
     "express": "^4.16.2",
-    "express-graphql": "^0.6.11",
     "fs": "0.0.1-security",
-    "graphql": "^0.12.3",
-    "graphql-tools": "^2.19.0",
     "path": "^0.12.7",
     "restyped-axios": "^1.3.1",
     "winston": "^2.4.0"
