--- a/package.json
+++ b/package.json
@@ -4,10 +4,10 @@
   "description": "API for Midweek Manager v2",
   "main": "app.js",
   "scripts": {
-    "start": "ts-node src/app.ts",
+    "start": "ts-node -r dotenv/config src/app.ts",
     "dev": "nodemon -e ts -w src -x npm run start",
     "build": "tsc",
-    "production": "node dist/app.js",
+    "production": "node -r dotenv/config dist/app.js",
     "test": "mocha -r ts-node/register test/**/*.ts",
     "unit": "mocha -wr ts-node/register --watch-extensions ts,tsx test/**/*.ts "
   },
@@ -41,6 +41,7 @@
   },
   "dependencies": {
     "body-parser": "^1.18.2",
+    "dotenv": "^6.0.0",
     "express": "^4.16.2",
     "fs": "0.0.1-security",
     "path": "^0.12.7",
