--- a/package.json
+++ b/package.json
@@ -40,12 +40,14 @@
     "typescript": "^2.6.2"
   },
   "dependencies": {
+    "@types/passport": "^0.4.5",
     "body-parser": "^1.18.2",
     "dotenv": "^6.0.0",
     "express": "^4.16.2",
     "fs": "0.0.1-security",
+    "passport": "^0.4.0",
+    "passport-auth0": "^0.6.1",
     "path": "^0.12.7",
-    "restyped-axios": "^1.3.1",
     "winston": "^2.4.0"
   }
 }
