--- a/package.json
+++ b/package.json
@@ -42,12 +42,16 @@
   "dependencies": {
     "@types/passport": "^0.4.5",
     "body-parser": "^1.18.2",
+    "cors": "^2.8.4",
     "dotenv": "^6.0.0",
     "express": "^4.16.2",
+    "express-jwt": "^5.3.1",
     "fs": "0.0.1-security",
+    "jwks-rsa": "^1.2.1",
     "passport": "^0.4.0",
     "passport-auth0": "^0.6.1",
     "path": "^0.12.7",
+    "uuid": "^3.2.1",
     "winston": "^2.4.0"
   }
 }
